# practice

./: README.md
c#/: random_walk.cs
c#/random_walk/: README.md
graphql-playlist/client/: package.json
graphql-playlist/client/src/: App.js  index.css
graphql-playlist/client/src/components/: AddBook.js  BookDetails.js  BookList.js
graphql-playlist/client/src/queries/: queries.js
graphql-playlist/server/: app.js  package.json
graphql-playlist/server/models/: author.js  book.js
graphql-playlist/server/schema/: schema.js
rust/snake/: Cargo.toml  README.md
rust/snake/src/: main.rs
sirens-stats/: README.md
sirens-stats/backend/: backend.cabal  package.yaml
sirens-stats/backend/app/: Main.hs
sirens-stats/backend/resources/: sirens_10.txt  sirens_fxt.txt
sirens-stats/backend/src/: Lib.hs
sirens-stats/backend/test/: Spec.hs
sirens-stats/frontend/: sirens.html  sirens.js
