[package]
name = "snake"
version = "0.1.0"
authors = ["tristanCadet <tristan.cadet@insa-lyon.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quickcheck = "0.9"
quickcheck_derive = "0.2.1"
rand = "0.7.3"
piston_window = "0.98.0"